# qtcreator-wakatime

./: CMakeLists.txt  README.md  Wakatime.json.in  cligetter.cpp  cligetter.h  vcpkg.json  waka_constants.h  waka_global.h  waka_options.cpp  waka_options.h  waka_options_page.cpp  waka_options_widget.cpp  waka_plugin.cpp  waka_plugin.h
.github/workflows/: build.yml
src/: waka_constants.h  waka_global.h  waka_options.cpp  waka_options.h  waka_plugin.cpp  waka_plugin.h  wakaworker.cpp  wakaworker.h
src/ui/: waka_options_page.cpp  waka_options_page.h  waka_options_widget.cpp  waka_options_widget.h
